Fixed icon spacing

--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,7 @@ li {
 /* Icons
 ------------------------- */
 .icons > a > span {
-  margin: .3em .3em .3em .3em;
+  margin: .4em .2em .4em .2em;
 }
 
 /* Facebook icon */
